07-helm-kustomize/kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: webserver
        image: bogd/go-webserver:latest
        #        env:
        #- name: LOG_MESSAGE
        #  value: "test message from bogd"
        securityContext:
          allowPrivilegeEscalation: false
          runAsUser: 1000
          capabilities:
            drop: ["ALL"]
          seccompProfile: 
            type: RuntimeDefault
