07-helm-kustomize/kustomize/base/patch-ingress-user-id.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp
spec:
  ingressClassName: openshift-default
  rules:
  - host: webapp-XX.apps.cluster1.openshift.vms.sass.ro
